# elastic-log-viewer

./: .gitignore  Cargo.toml
frontend/: package.json
frontend/src/LogViewer/: LogFilter.tsx  index.tsx  types.ts
log-viewer-frontend/: package.json
log-viewer-frontend/src/: App.tsx  DateHelpers.tsx  LogViewer.tsx  index.tsx
log-viewer-frontend/src/LogViewer/: LogFilter.tsx  index.tsx
src/: elastic.rs  main.rs
