[package]
name = "elastic-log-viewer"
version = "0.1.0"
authors = ["Martin Tomasi <martin.tomasi@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
dotenv = "0.15.0"
elasticsearch = "7.7.1-alpha.1"
log = { version = "0.4.8", features = ["serde"] }
once_cell = "1.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "0.2.13", features = ["macros"] }
uuid = "0.8.1"
warp = "0.2.2"
env_logger = "0.7.1"
heck = "0.3.1"
