[package]
name = "elastic-log-viewer"
version = "0.1.0"
authors = ["Martin Tomasi <martin.tomasi@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.15", features = ["serde"] }
dotenv = "0.15.0"
elasticsearch = "7.8.1-alpha.1"
log = { version = "0.4.11", features = ["serde"] }
once_cell = "1.4.0"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
tokio = { version = "0.2.22", features = ["macros"] }
uuid = "0.8.1"
warp = "0.2.4"
env_logger = "0.7.1"
heck = "0.3.1"
